packaging/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thermal-simd-metrics
  labels:
    app: thermal-simd
spec:
  selector:
    app: thermal-simd
  ports:
    - name: http-metrics
      port: 9464
      targetPort: metrics
      protocol: TCP
  type: ClusterIP
